[package]
name = "hello"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled"] }
axum = "0.7.5"  # Check if this is the latest version
tokio = { version = "1.39.2", features = ["full"] }  # For async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }  # Consider using the latest stable version
